force-app/main/default/objects/Annual_Survey__c/fields/Other_basic_needs_distributed__c.field-meta.xml
<CustomField>
    <fullName>Other_basic_needs_distributed__c</fullName>
    <label>Other basic needs distributed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>