force-app/main/default/objects/Annual_Survey__c/fields/Other_Period_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Other_Period_Supplies__c</fullName>
    <label>Other Period Supplies</label>
    <type>TextArea</type>
</CustomField>