force-app/main/default/objects/Annual_Survey__c/fields/Paid_Staff_FT__c.field-meta.xml
<CustomField>
    <fullName>Paid_Staff_FT__c</fullName>
    <description>Number of paid full-time staff</description>
    <label>Paid Staff FT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>