force-app/main/default/objects/Annual_Survey__c/fields/Pain_Relievers__c.field-meta.xml
<CustomField>
    <fullName>Pain_Relievers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pain Relievers</label>
    <type>Checkbox</type>
</CustomField>