force-app/main/default/objects/Annual_Survey__c/fields/Partner_Agencies_Total_Basic_Needs_Bank__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agencies_Total_Basic_Needs_Bank__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of agencies with which the basic needs bank partners (combined period supply and diaper supply distribution). One agency indicates direct service only.</inlineHelpText>
    <label>Partner Agencies-Total Basic Needs Bank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>