force-app/main/default/objects/Annual_Survey__c/fields/Period_products_distributed__c.field-meta.xml
<CustomField>
    <fullName>Period_products_distributed__c</fullName>
    <formula>Pads_distributed__c  + Tampons_distributed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of pads, and tampons.</inlineHelpText>
    <label>Period products distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>