force-app/main/default/objects/Annual_Survey__c/fields/Period_Underwear__c.field-meta.xml
<CustomField>
    <fullName>Period_Underwear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Period Underwear</label>
    <type>Checkbox</type>
</CustomField>