force-app/main/default/objects/Annual_Survey__c/fields/Purchased_period_supplies__c.field-meta.xml
<CustomField>
    <fullName>Purchased_period_supplies__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percent of period supplies purchased</inlineHelpText>
    <label>Purchased Period Supplies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>