force-app/main/default/objects/Annual_Survey__c/fields/Purchased_Period_Supply_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Period_Supply_Dollars__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Purchased Period Supply - Dollars</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>