force-app/main/default/objects/Annual_Survey__c/fields/Recipient_Type_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type_AnSv__c</fullName>
    <label>Recipient Type AnSv</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infant/Toddler</fullName>
            </value>
            <value>
                <fullName>Older Children</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>