force-app/main/default/objects/Annual_Survey__c/fields/Repackaging__c.field-meta.xml
<CustomField>
    <fullName>Repackaging__c</fullName>
    <inlineHelpText>Are period products repackaged and if so is it mainly to standardize inventory into uniform packs or is it to create mixed packs of various product for the clients served?</inlineHelpText>
    <label>Repackaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Mixed Packs</fullName>
            </value>
            <value>
                <fullName>Uniform Packs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>