force-app/main/default/objects/Annual_Survey__c/fields/Reps_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Reps_Contacted__c</fullName>
    <label>Reps Contacted</label>
    <length>155</length>
    <type>Text</type>
</CustomField>