force-app/main/default/objects/Annual_Survey__c/fields/Reusable_Cloth_Pads__c.field-meta.xml
<CustomField>
    <fullName>Reusable_Cloth_Pads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reusable Cloth Pads</label>
    <type>Checkbox</type>
</CustomField>