force-app/main/default/objects/Annual_Survey__c/fields/School_supplies__c.field-meta.xml
<CustomField>
    <fullName>School_supplies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School supplies</label>
    <type>Checkbox</type>
</CustomField>