force-app/main/default/objects/Annual_Survey__c/fields/Soap_and_Shampoo__c.field-meta.xml
<CustomField>
    <fullName>Soap_and_Shampoo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Soap, shampoo, other body cleaning supplies</inlineHelpText>
    <label>Soap and Shampoo</label>
    <type>Checkbox</type>
</CustomField>