force-app/main/default/objects/Annual_Survey__c/fields/Spent_on_Period_Supplies__c.field-meta.xml
<CustomField>
    <fullName>Spent_on_Period_Supplies__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount of money spent purchasing period supplies</inlineHelpText>
    <label>Cost of Purchased Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>