force-app/main/default/objects/Annual_Survey__c/fields/Sr_Primary_Contact_Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Sr_Primary_Contact_Reports_To__c</fullName>
    <inlineHelpText>To whom does the NDBN or APS primary contact (senior staff if two) report?</inlineHelpText>
    <label>Sr Primary Contact Reports To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>