force-app/main/default/objects/Annual_Survey__c/fields/Story_to_Share__c.field-meta.xml
<CustomField>
    <fullName>Story_to_Share__c</fullName>
    <inlineHelpText>Share one of your best stories from 2020 with us. For this question, you may be asked to participate in an interview with NDBN that will be featured on the website, on social media, or with donors that will highlight this story</inlineHelpText>
    <label>Story to Share</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>