force-app/main/default/objects/Annual_Survey__c/fields/Submit_Date_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date_AnSv__c</fullName>
    <label>Submit Date AnSv</label>
    <type>Date</type>
</CustomField>