force-app/main/default/objects/Annual_Survey__c/fields/Succession_Plan__c.field-meta.xml
<CustomField>
    <fullName>Succession_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The question, Do you have a succession plan? may refer to leadership or board member changes.</inlineHelpText>
    <label>Succession Plan</label>
    <type>Checkbox</type>
</CustomField>