force-app/main/default/objects/Annual_Survey__c/fields/Underwear_or_Socks_Adult__c.field-meta.xml
<CustomField>
    <fullName>Underwear_or_Socks_Adult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Underwear or Socks-Adult</label>
    <type>Checkbox</type>
</CustomField>