force-app/main/default/objects/Annual_Survey__c/fields/Unpaid_staff_FTE__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_staff_FTE__c</fullName>
    <description>Number of unpaid full-time staff</description>
    <label>Unpaid staff FTE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>