force-app/main/default/objects/Annual_Survey__c/fields/Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total hours provided by volunteers</description>
    <label>Volunteer Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>