force-app/main/default/objects/Annual_Survey__c/fields/Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Volunteers__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of volunteers who served</description>
    <label>Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>