force-app/main/default/objects/Annual_Survey__c/fields/Warehouse_Space_SF_AnSv__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Space_SF_AnSv__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Warehouse Space SF AnSv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>