force-app/main/default/objects/Annual_Survey__c/fields/Warehouse_Type__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Type__c</fullName>
    <label>Warehouse Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential space</fullName>
            </value>
            <value>
                <fullName>Consumer/container/self-storage</fullName>
            </value>
            <value>
                <fullName>Office/business that has storage</fullName>
            </value>
            <value>
                <fullName>Warehouse with loading bay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>