force-app/main/default/objects/Annual_Survey__c/fields/Year_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Year_Reporting__c</fullName>
    <label>Year Reporting</label>
    <length>4</length>
    <type>Text</type>
</CustomField>