force-app/main/default/objects/Annual_Survey__c/listViews/Founder_EDs_and_Compensation.listView-meta.xml
<ListView>
    <fullName>Founder_EDs_and_Compensation</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>Submit_Date_AnSv__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Annual_Distribution_AnSv__c</columns>
    <columns>ED_is_founder__c</columns>
    <columns>Founder_ED_Paid_Full_Time__c</columns>
    <columns>Paid_Staff_FT__c</columns>
    <columns>Unpaid_staff_FTE__c</columns>
    <columns>Succession_Plan__c</columns>
    <columns>Volunteers__c</columns>
    <columns>Volunteer_Hours__c</columns>
    <columns>Media_Mentions__c</columns>
    <columns>Grant_Funding_Total__c</columns>
    <columns>Individual_Donors__c</columns>
    <columns>Individual_Donations__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year_Reporting__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>A11</value>
    </filters>
    <filters>
        <field>ED_is_founder__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Founder EDs and Compensation</label>
</ListView>